remove java options